[tool.poetry]
authors = ["Isaac Barnhart"]
description = "Nutrient recommendation tool for various crops"
name = "nutrient-recommendation"
version = "0.1.0"

[tool.poetry.dependencies]
numpy = "^1.22.4"
pandas = "numpy"
python = "^3.10"
streamlit = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
